--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
 <h1><%= @greeting %></h1>
+<h1> 
+    <a href="https://codeclimate.com/github/rails/rails">
+    <img src="https://codeclimate.com/github/rails/rails/badges/gpa.svg" />
+    </a>
+</h1>
