--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,17 @@
-<h1><%= @greeting %></h1>
-<h1> 
+
+<!--<h1><center><%= @greeting %></center></h1> -->
+<h1><center>Welcome to the RMSI registration page!</center> </h1>
+&nbsp;
+&nbsp;
+<h3> 
+    
+    <center> To proceed, please select which type of vendor you are. </center>
+    &nbsp;
+    &nbsp;
+    <center><button type="button" class="btn btn-primary btn-lg">Food Vendor</button></center>
+    &nbsp;
+    <center><button type="button" class="btn btn-primary btn-lg">Retail/Artisan or Nonprofit Vendor</button></center>
     <a href="https://codeclimate.com/github/rails/rails">
     <img src="https://codeclimate.com/github/rails/rails/badges/gpa.svg" />
     </a>
-</h1>
+</h3>
