buttons now go to appropriate pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,8 +8,10 @@
     <center> To proceed, please select which type of vendor you are. </center>
     &nbsp;
     &nbsp;
+    <a href=food>
     <center><button type="button" class="btn btn-primary btn-lg">Food Vendor</button></center>
     &nbsp;
+    <a href=nonfood>
     <center><button type="button" class="btn btn-primary btn-lg">Retail/Artisan or Nonprofit Vendor</button></center>
     <a href="https://codeclimate.com/github/rails/rails">
     <img src="https://codeclimate.com/github/rails/rails/badges/gpa.svg" />
