--- a/app/views/pages/food.html.erb
+++ b/app/views/pages/food.html.erb
@@ -80,11 +80,26 @@
 
           
           
-        <div class="form-group">        
+        <div class="form-group"> 
+        <center>Equipment Rental</center>
+        
           <div class="col-sm-offset-2 col-sm-10">
-            <div class="checkbox">
-              <label><input type="checkbox"> 6' table ($10)</label>
-            </div>
+            <label> 6' table:
+              <select class="equipment-select">
+                <option value="zero">0</option>
+                <option value="one">1</option>
+                <option value="two">2</option>
+                <option value="three">3</option>
+              </select>
+              </label>
+              <label> 6' table:
+              <select class="equipment-select">
+                <option value="zero">0</option>
+                <option value="one">1</option>
+                <option value="two">2</option>
+                <option value="three">3</option>
+              </select>
+              </label>
           </div>
         </div>
         
