--- a/app/views/pages/food.html.erb
+++ b/app/views/pages/food.html.erb
@@ -81,37 +81,69 @@
           
           
         <div class="form-group"> 
-        <center>Equipment Rental</center>
-        
-          <div class="col-sm-offset-2 col-sm-10">
-            <label> 6' table:
-              <select class="equipment-select">
-                <option value="zero">0</option>
-                <option value="one">1</option>
-                <option value="two">2</option>
-                <option value="three">3</option>
-              </select>
-              </label>
-              <label> 6' table:
-              <select class="equipment-select">
-                <option value="zero">0</option>
-                <option value="one">1</option>
-                <option value="two">2</option>
-                <option value="three">3</option>
-              </select>
-              </label>
-          </div>
+        <center>Equipment Rental (Optional)</center>
         </div>
         
         <div class="form-group">        
           <div class="col-sm-offset-2 col-sm-10">
-            <div class="checkbox">
-              <label><input type="checkbox"> 11' unbrella ($55)</label>
-            </div>
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>Equipment Type</th>
+                  <th>Quantity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>6' Table ($10)</td>
+                  <td>
+                  <select class="equipment-select">
+                  <option value="zero">0</option>
+                  <option value="one">1</option>
+                  <option value="two">2</option>
+                  <option value="three">3</option>
+                  </select>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Folding Chair ($5)</td>
+                  <td>
+                  <select class="equipment-select">
+                  <option value="zero">0</option>
+                  <option value="one">1</option>
+                  <option value="two">2</option>
+                  <option value="three">3</option>
+                  </select>
+                  </td>
+                </tr>
+                <tr>
+                  <td>11' Market Umbrella ($50)</td>
+                  <td>
+                  <select class="equipment-select">
+                  <option value="zero">0</option>
+                  <option value="one">1</option>
+                  <option value="two">2</option>
+                  <option value="three">3</option>
+                  </select>
+                  </td>
+                </tr>
+                <tr>
+                  <td>10'x10' Food Service Tent ($110)</td>
+                  <td>
+                  <select class="equipment-select">
+                  <option value="zero">0</option>
+                  <option value="one">1</option>
+                  <option value="two">2</option>
+                  <option value="three">3</option>
+                  </select>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
-        
-        
+            
+            
         <div class="form-group">        
           <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-default">Continue</button>
