--- a/app/views/pages/food.html.erb
+++ b/app/views/pages/food.html.erb
@@ -1,12 +1,17 @@
 <!--<h1><center><%= @greeting %></center></h1> -->
+  <head>
+    <link rel="stylesheet" href="/app/assets/stylesheets/application.css" type="text/css">
+    <title>Food Vendor Registration Form</title>
+  </head>
 <h1><center>Food Vendor Registration Form</center> </h1>
 &nbsp;
 &nbsp;
 <h3>
-    
     <div class="container">
+        <div class="form-group"> 
+        <center>Basic Info</center>
+        </div>
       <form class="form-horizontal" role="form">
-        
         <div class="form-group">
           <label class="control-label col-sm-2" for="oname">Organization Name:</label>
           <div class="col-sm-10">
@@ -78,7 +83,22 @@
           </div>
         </div>
 
-          
+        <div class="form-group"> 
+        <center>Registration Forms</center>
+        </div>
+        
+        <div class="form-group">
+          <label class="control-label">Food facility operator form:</label>
+          <input id="input-7" name="input7[]" multiple type="file" class="file file-loading" data-allowed-file-extensions='["pdf", "doc"]'>
+        </div>
+        <div class="form-group">
+          <label class="control-label">Copy of contract for commercial kitchen used to prepare food:</label>
+          <input id="input-7" name="input7[]" multiple type="file" class="file file-loading" data-allowed-file-extensions='["pdf", "doc"]'>
+        </div>
+        <div class="form-group">
+          <label class="control-label">DD214</label>
+          <input id="input-7" name="input7[]" multiple type="file" class="file file-loading" data-allowed-file-extensions='["pdf", "doc"]'>
+        </div>  
           
         <div class="form-group"> 
         <center>Equipment Rental (Optional)</center>
@@ -142,7 +162,6 @@
             </table>
           </div>
         </div>
-            
             
         <div class="form-group">        
           <div class="col-sm-offset-2 col-sm-10">
