--- a/app/views/pages/food.html.erb
+++ b/app/views/pages/food.html.erb
@@ -151,7 +151,7 @@
         </div>
         
         <div class="form-group">
-          <label class="control-label">Food facility operator form:</label>
+          <label>Food facility operator form:</label>
           <input id="input-7" name="input7[]" multiple type="file" class="file file-loading" data-allowed-file-extensions='["pdf", "doc"]'>
         </div>
         <div class="form-group">
