retail/artisan vendor form added. Home page updated for new options

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,11 +8,17 @@
     <center> To proceed, please select which type of vendor you are. </center>
     &nbsp;
     &nbsp;
+    <center>
     <a href=food>
-    <center><button type="button" class="btn btn-primary btn-lg">Food Vendor</button></center>
+    <button type="button" class="btn btn-primary btn-lg">Food Vendor</button>
+    <a href=retail>
+    <button type="button" class="btn btn-primary btn-lg">Retail/Artisan Vendor</button>
+    <!--TO BE IMPLEMENTED <a href=nonfood>-->
+    <button type="button" class="btn btn-primary btn-lg">Non-Profit Vendor</button>
+    <!--TO BE IMPLEMENTED <a href=nonfood>-->
+    <button type="button" class="btn btn-primary btn-lg">Commercial Vendor</button>
+    </center>
     &nbsp;
-    <a href=nonfood>
-    <center><button type="button" class="btn btn-primary btn-lg">Retail/Artisan or Nonprofit Vendor</button></center>
     <a href="https://codeclimate.com/github/rails/rails">
     <img src="https://codeclimate.com/github/rails/rails/badges/gpa.svg" />
     </a>
