nonprofit form created and linked to home page button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
     <button type="button" class="btn btn-primary btn-lg">Food Vendor</button>
     <a href=retail>
     <button type="button" class="btn btn-primary btn-lg">Retail/Artisan Vendor</button>
-    <!--TO BE IMPLEMENTED <a href=nonfood>-->
+    <a href=nonprofit>
     <button type="button" class="btn btn-primary btn-lg">Non-Profit Vendor</button>
     <!--TO BE IMPLEMENTED <a href=nonfood>-->
     <button type="button" class="btn btn-primary btn-lg">Commercial Vendor</button>
