--- a/app/views/pages/nonprofit.html.erb
+++ b/app/views/pages/nonprofit.html.erb
@@ -72,16 +72,9 @@
         </div>
         
         <div class="form-group">
-          <label class="control-label col-sm-2" for="oname">Business ID:</label>
+          <label class="control-label col-sm-2" for="oname">Tax ID #:</label>
           <div class="col-sm-10">
-            <input type="bid" class="form-control" id="bid" placeholder="Enter Business ID">
-          </div>
-        </div>
-        
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="oname">Resale Permit #:</label>
-          <div class="col-sm-10">
-            <input type="bid" class="form-control" id="bid" placeholder="Only if applicable">
+            <input type="bid" class="form-control" id="bid" placeholder="Enter Tax ID #">
           </div>
         </div>
         
@@ -92,6 +85,16 @@
           </div>
         </div>
         
+        <div class='form-group'>
+        <center>Non-Profit Organization Type <br>
+        <form action="demo_form.asp">
+          <input type="radio" name="nonprofit_type" value="Sales"> Sales &nbsp
+          <input type="radio" name="nonprofit_type" value="Information"> Information <br>
+        </form>
+        </center>
+        </div>
+        
+        <br>
         <div class="form-group"> 
         <center>Equipment Rental (Optional)</center>
         </div>
