commercial info form created and linked to home button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,14 +10,15 @@
     &nbsp;
     <center>
     <a href=food>
-    <button type="button" class="btn btn-primary btn-lg">Food Vendor</button>
+    <button type="button" class="btn btn-primary btn-lg">Food</button>
     <a href=retail>
-    <button type="button" class="btn btn-primary btn-lg">Retail/Artisan Vendor</button>
+    <button type="button" class="btn btn-primary btn-lg">Retail/Artisan</button>
     <a href=nonprofit>
-    <button type="button" class="btn btn-primary btn-lg">Non-Profit Vendor</button>
-    <!--TO BE IMPLEMENTED <a href=nonfood>-->
-    <button type="button" class="btn btn-primary btn-lg">Commercial Vendor</button>
+    <button type="button" class="btn btn-primary btn-lg">Non-Profit</button>
+    <a href=commercial>
+    <button type="button" class="btn btn-primary btn-lg">Commercial Information</button>
     </center>
+    &nbsp;
     &nbsp;
     <a href="https://codeclimate.com/github/rails/rails">
     <img src="https://codeclimate.com/github/rails/rails/badges/gpa.svg" />
