Added cuc tests for food vendor

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,22 @@
     <button type="button" class="btn btn-primary btn-lg">Non-Profit</button>
     <a href=commercial>
     <button type="button" class="btn btn-primary btn-lg">Commercial Information</button>
+    </a>
     </center>
     &nbsp;
     &nbsp;
 </h3>
+<!--<h4>-->
+<!--    <div class="col-sm-2">-->
+    
+<!--    </div-->
+<!--    <form class="form-horizontal" role="form" action="/" method="get">-->
+<!--        <div class="form-group">-->
+<!--          <label class="control-label col-sm-2" for="oname">Admin Login:</label>-->
+<!--          <div class="col-sm-2">-->
+<!--            <input type="password" class="form-control" id="password" placeholder="Enter Password">-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <input type="submit" value="Login">-->
+<!--    </form>-->
+<!--</h4>-->
