Cuke tests for nonprofit and com. info vendors added

--- a/app/views/pages/nonprofit.html.erb
+++ b/app/views/pages/nonprofit.html.erb
@@ -87,9 +87,9 @@
         
         <div class='form-group'>
         <center>Non-Profit Organization Type <br>
-        <form action="demo_form.asp">
-          <input type="radio" name="nonprofit_type" value="Sales"> Sales &nbsp
-          <input type="radio" name="nonprofit_type" value="Information"> Information <br>
+        <form>
+          <input type="radio" name="sales" value="Sales"> Sales &nbsp
+          <input type="radio" name="information" value="Information"> Information <br>
         </form>
         </center>
         </div>
