Nonprofit form refactor to allow passing of form inputs as params, model creation successful

--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -1,4 +1,2 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to 'Edit', edit_form_path(@form) %> |
-<%= link_to 'Back', forms_path %>
+<h1><center>Thank you for submitting!</center> </h1>
+<center><%= link_to "Back to home page", root_path %></center>
