--- a/app/views/forms/nonprofit.html.erb
+++ b/app/views/forms/nonprofit.html.erb
@@ -1,70 +1,75 @@
+<!--<h1><center><%= @greeting %></center></h1> -->
+<h1><center>Non-Profit Vendor Registration Form</center> </h1>
+&nbsp;
+&nbsp;
 <%= form_for(@form) do |f| %>
   
   <div class="field">
-    <%= f.label "Organization name" %>
+    <label class="control-label col-sm-2" for="oname">Organization Name:</label>
     <%= f.text_field :name %>
   </div>
   
   <div class="field">
-    <%= f.label "Contact name" %>
+    <label class="control-label col-sm-2" for="oname">Contact Name:</label>
     <%= f.text_field :user %>
   </div>
-  
+
   <div class="field">
-    <%= f.label "Email" %>
+    <label class="control-label col-sm-2" for="oname">Email:</label>
     <%= f.text_field :email %>
   </div>
   
   <div class="field">
-    <%= f.label "Address" %>
+    <label class="control-label col-sm-2" for="oname">Address:</label>
     <%= f.text_field :address %>
   </div>
   
   <div class="field">
-    <%= f.label "City" %>
+    <label class="control-label col-sm-2" for="oname">City:</label>
     <%= f.text_field :city %>
   </div>
   
   <div class="field">
-    <%= f.label "Zip code" %>
+    <label class="control-label col-sm-2" for="oname">Zip Code:</label>
     <%= f.text_field :zip %>
   </div>
   
   <div class="field">
-    <%= f.label "Business phone" %>
+    <label class="control-label col-sm-2" for="oname">Business Phone:</label>
     <%= f.text_field :busphone %>
   </div>
   
   <div class="field">
-    <%= f.label "Cell phone" %>
+    <label class="control-label col-sm-2" for="oname">Cell Phone:</label>
     <%= f.text_field :cell %>
   </div>
   
   <div class="field">
-    <%= f.label "Website" %>
+    <label class="control-label col-sm-2" for="oname">Website:</label>
     <%= f.text_field :website %>
   </div>
   
   <div class="field">
-    <%= f.label "Tax id" %>
+    <label class="control-label col-sm-2" for="oname">Tax ID:</label>
     <%= f.text_field :taxID %>
   </div>
   
   <div class="field">
-    <%= f.label "Product(s)/services" %>
+    <label class="control-label col-sm-2" for="oname">Product(s)/Services:</label>
     <%= f.text_field :product %>
   </div>
   
   <div class="field">
     <center>
     <%= label_tag("Non-Profit Organization Type") %> <br/>
-    <%= radio_button_tag(:orgtype, "sales") %>
+    <%= radio_button_tag(:orgtype, "sales", false, :id => "orgtype_sales") %>
     <%= label_tag("Sales") %> <br/>
-    <%= radio_button_tag(:orgtype, "information") %>
+    <%= radio_button_tag(:orgtype, "information", false, :id => "orgtype_info") %>
     <%= label_tag("Information") %> <br/>
     </center>
   </div>
   
+  <label>Equipment Rental: </label><br/>
   <%= select_tag :numTables, "<option>0</option> <option>1</option> <option>2</option> <option>3</option>".html_safe %>
   <%= label_tag("6' Table ($10)") %> <br/>
   <%= select_tag :numChairs, "<option>0</option> <option>1</option> <option>2</option> <option>3</option>".html_safe %> 
@@ -72,9 +77,10 @@
   <%= select_tag :numbrellas, "<option>0</option> <option>1</option> <option>2</option> <option>3</option>".html_safe %> 
   <%= label_tag("11' Market Umbrella ($50)") %> <br/>
   <%= select_tag :numTents, "<option>0</option> <option>1</option> <option>2</option> <option>3</option>".html_safe %> 
-  <%= label_tag("10'x10' Food Service Tent ($110)") %> <br/>
+  <%= label_tag("10'x10' Food Service Tent ($110)") %>  <br/>
+
   
-  <div class="actions">
+  <div class="actions" align="left">
     <%= f.submit %>
   </div>
  
