--- a/app/views/forms/food.html.erb
+++ b/app/views/forms/food.html.erb
@@ -1,186 +1,104 @@
 <!--<h1><center><%= @greeting %></center></h1> -->
-  <head>
-    <link rel="stylesheet" href="/app/assets/stylesheets/application.css" type="text/css">
-    <title>Food Vendor Registration Form</title>
-  </head>
-  <script type='text/javascript'>
-    (function()
-    {
-      if( window.localStorage )
-      {
-        if( !localStorage.getItem( 'firstLoad' ) )
-        {
-          localStorage[ 'firstLoad' ] = true;
-          window.location.reload();
-        }  
-        else
-          localStorage.removeItem( 'firstLoad' );
-      }
-    })();
-  </script>
-
-<h1><center>Food Vendor Registration Form</center> </h1>
+<h1><center>Non-Profit Vendor Registration Form</center> </h1>
 &nbsp;
 &nbsp;
-<h3>
-    <div class="container">
-      <form class="form-horizontal" role="form">
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="oname">Organization Name:</label>
-          <div class="col-sm-10">
-            <input type="oname" class="form-control" id="oname" placeholder="Enter name">
-          </div>
-        </div>
-        
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="cname">Contact Name:</label>
-          <div class="col-sm-10">
-            <input type="cname" class="form-control" id="cname" placeholder="Enter name">
-          </div>
-        </div>
-         
-         
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="email">Email:</label>
-          <div class="col-sm-10">
-            <input type="email" class="form-control" id="email" placeholder="Enter Email">
-          </div>
-        </div>
-        
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="oname">Address:</label>
-          <div class="col-sm-10">
-            <input type="adr" class="form-control" id="adr" placeholder="Enter Address">
-          </div>
-        </div>
-        
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="oname">City:</label>
-          <div class="col-sm-10">
-            <input type="city" class="form-control" id="city" placeholder="Enter City">
-          </div>
-        </div>
+<%= form_for(@form) do |f| %>
 
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="oname">Zip Code:</label>
-          <div class="col-sm-10">
-            <input type="zcode" class="form-control" id="zcode" placeholder="Enter Zip Code">
-          </div>
-        </div>
-        
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="oname">Business Phone:</label>
-          <div class="col-sm-10">
-            <input type="bpn" class="form-control" id="bpn" placeholder="Enter Phone #">
-          </div>
-        </div>
-        
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="oname">Cell Phone:</label>
-          <div class="col-sm-10">
-            <input type="cpn" class="form-control" id="cpn" placeholder="Enter Phone #">
-          </div>
-        </div>
-        
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="oname">Website:</label>
-          <div class="col-sm-10">
-            <input type="wsite" class="form-control" id="wsite" placeholder="Enter Website URL">
-          </div>
-        </div>
-        
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="oname">Business ID:</label>
-          <div class="col-sm-10">
-            <input type="bid" class="form-control" id="bid" placeholder="Enter Business ID">
-          </div>
-        </div>
-          
-        <div class="form-group"> 
-        <center>Equipment Rental (Optional)</center>
-        </div>
-        
-        <div class="form-group">        
-          <div class="col-sm-offset-2 col-sm-10">
-            <table class="table table-bordered">
-              <thead>
-                <tr>
-                  <th>Equipment Type</th>
-                  <th>Quantity</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>6' Table ($10)</td>
-                  <td>
-                  <select class="equipment-select">
-                  <option value="zero">0</option>
-                  <option value="one">1</option>
-                  <option value="two">2</option>
-                  <option value="three">3</option>
-                  </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td>Folding Chair ($5)</td>
-                  <td>
-                  <select class="equipment-select">
-                  <option value="zero">0</option>
-                  <option value="one">1</option>
-                  <option value="two">2</option>
-                  <option value="three">3</option>
-                  </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td>11' Market Umbrella ($50)</td>
-                  <td>
-                  <select class="equipment-select">
-                  <option value="zero">0</option>
-                  <option value="one">1</option>
-                  <option value="two">2</option>
-                  <option value="three">3</option>
-                  </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td>10'x10' Food Service Tent ($110)</td>
-                  <td>
-                  <select class="equipment-select">
-                  <option value="zero">0</option>
-                  <option value="one">1</option>
-                  <option value="two">2</option>
-                  <option value="three">3</option>
-                  </select>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        
-                <div class="form-group"> 
-        <center>Registration Forms</center>
-        </div>
-        
-        <div class="form-group">
-          <label>Food facility operator form:</label>
-          <input id="input-7" name="input7[]" multiple type="file" class="file file-loading" data-allowed-file-extensions='["pdf", "doc"]'>
-        </div>
-        <div class="form-group">
-          <label class="control-label">Copy of contract for commercial kitchen used to prepare food:</label>
-          <input id="input-8" name="input8[]" multiple type="file" class="file file-loading" data-allowed-file-extensions='["pdf", "doc"]'>
-        </div>
-        <div class="form-group">
-          <label class="control-label">DD214</label>
-          <input id="input-9" name="input9[]" multiple type="file" class="file file-loading" data-allowed-file-extensions='["pdf", "doc"]'>
-        </div>  
-            
-        <div class="form-group">        
-          <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Continue</button>
-          </div>
-        </div>
-      </form>
-    </div>
-</h3>
+  <%= hidden_field_tag(:formtype, "food") %>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Organization Name:</label>
+    <%= f.text_field :name %>
+  </div>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Contact Name:</label>
+    <%= f.text_field :user %>
+  </div>
+
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Email:</label>
+    <%= f.text_field :email %>
+  </div>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Address:</label>
+    <%= f.text_field :address %>
+  </div>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">City:</label>
+    <%= f.text_field :city %>
+  </div>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Zip Code:</label>
+    <%= f.text_field :zip %>
+  </div>
+ </div>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Business Phone:</label>
+    <%= f.text_field :busphone %>
+  </div>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Cell Phone:</label>
+    <%= f.text_field :cell %>
+  </div>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Website:</label>
+    <%= f.text_field :website %>
+  </div>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Business ID:</label>
+    <%= f.text_field :busID %>
+  </div>
+
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Product(s)/Services:</label>
+    <%= f.text_field :product %>
+  </div>
+  
+  
+  <label>Equipment Rental: </label><br/>
+  <%= select_tag :numTables, "<option>0</option> <option>1</option> <option>2</option> <option>3</option>".html_safe %>
+  <%= label_tag("6' Table ($10)") %> <br/>
+  <%= select_tag :numChairs, "<option>0</option> <option>1</option> <option>2</option> <option>3</option>".html_safe %> 
+  <%= label_tag("Folding Chair ($5)") %> <br/>
+  <%= select_tag :numbrellas, "<option>0</option> <option>1</option> <option>2</option> <option>3</option>".html_safe %> 
+  <%= label_tag("11' Market Umbrella ($50)") %> <br/>
+  <%= select_tag :numTents, "<option>0</option> <option>1</option> <option>2</option> <option>3</option>".html_safe %> 
+  <%= label_tag("10'x10' Food Service Tent ($110)") %>  <br/>
+  
+    <br>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Food facility operator form:</label>
+    <%= f.file_field :facility_op_form %>
+  </div>
+  
+  <br>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">Copy of contract for commercial kitchen used to prepare food:</label>
+    <%= f.file_field :kitchen_contract %>
+  </div>
+  
+  <br>
+  <br>
+  
+  <div class="field">
+    <label class="control-label col-sm-2" for="oname">DD214</label>
+    <%= f.file_field :DD214 %>
+  </div>
+  
+  <div class="actions" align="left">
+    <%= f.submit %>
+  </div>
+  
+  <%= hidden_field_tag(:formtype, "food") %>
+ 
+<% end %>
