--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@form) do |f| %>
   <% if @form.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@form.errors.count, "error") %> prohibited this form from being saved:</h2>
+      <h2><%= pluralize(@form.errors.count, "Missing Field") %> prohibited this form from being saved:</h2>
 
       <ul>
       <% @form.errors.full_messages.each do |message| %>
