--- a/app/views/forms/commercial.html.erb
+++ b/app/views/forms/commercial.html.erb
@@ -4,6 +4,18 @@
 &nbsp;
 <%= form_for(@form) do |f| %>
   
+  <% if @form.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@form.errors.count, "missing field") %> prohibited this form from being saved:</h2>
+
+      <ul>
+      <% @form.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  
   <%= hidden_field_tag(:formtype, "commercial") %>
   
   <div class="field">
@@ -61,7 +73,7 @@
     <%= f.text_field :product %>
   </div>
   
-  <label>Equipment Rental: </label><br/>
+  <label>Equipment Rental (Optional): </label><br/>
   <%= select_tag :numTables, "<option>0</option> <option>1</option> <option>2</option> <option>3</option>".html_safe %>
   <%= label_tag("6' Table ($10)") %> <br/>
   <%= select_tag :numChairs, "<option>0</option> <option>1</option> <option>2</option> <option>3</option>".html_safe %> 
