--- a/app/views/forms/retail.html.erb
+++ b/app/views/forms/retail.html.erb
@@ -5,6 +5,18 @@
 
 <%= form_for(@form) do |f| %>
 
+  <% if @form.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@form.errors.count, "missing field") %> prohibited this form from being saved:</h2>
+
+      <ul>
+      <% @form.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  
   <%= hidden_field_tag(:formtype, "retail") %>
   
   <div class="field">
