--- a/app/views/forms/commercial.html.erb
+++ b/app/views/forms/commercial.html.erb
@@ -4,6 +4,9 @@
 &nbsp;
 <%= form_for(@form) do |f| %>
   
+  <%= f.hidden_field(:formtype, :value => "commercial") %>
+
+  
   <% if @form.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@form.errors.count, "missing field") %> prohibited this form from being saved:</h2>
@@ -15,9 +18,7 @@
       </ul>
     </div>
   <% end %>
-  
-  <%= hidden_field_tag(:formtype, "commercial") %>
-  
+
   <div class="field">
     <label class="control-label col-sm-2" for="oname">Organization Name:</label>
     <%= f.text_field :name %>
