--- a/app/views/forms/retail.html.erb
+++ b/app/views/forms/retail.html.erb
@@ -5,6 +5,8 @@
 
 <%= form_for(@form) do |f| %>
 
+  <%= f.hidden_field(:formtype, :value => "retail") %>
+  
   <% if @form.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@form.errors.count, "missing field") %> prohibited this form from being saved:</h2>
@@ -16,8 +18,6 @@
       </ul>
     </div>
   <% end %>
-  
-  <%= hidden_field_tag(:formtype, "retail") %>
   
   <div class="field">
     <label class="control-label col-sm-2" for="oname">Organization Name:</label>
