--- a/app/views/forms/home.html.erb
+++ b/app/views/forms/home.html.erb
@@ -19,6 +19,7 @@
     <button type="button" class="btn btn-primary btn-lg">Commercial Information</button>
     </a>
     </center>
+    <%= link_to 'Download CSV list', forms_path(format: :csv) %>
     &nbsp;
     &nbsp;
 </h3>
