--- a/app/views/forms/admin.html.erb
+++ b/app/views/forms/admin.html.erb
@@ -1,1 +1,12 @@
-<h1>Admin panel Biiiiiiiiitch</h1>
+<h1>Enter Admin Password</h1>
+
+<%= form_tag("/admin", method: "get") do %>
+  <%= label_tag(:pass, "Password:") %>
+  <%= text_field_tag(:pass) %>
+  <%= submit_tag("Enter") %>
+
+<% if params[:pass] == 'adminadmin123' %>
+    <%= link_to 'Download CSV list', forms_path(format: :csv) %>
+<% end %>
+<% end %>
+  
