--- a/app/views/forms/home.html.erb
+++ b/app/views/forms/home.html.erb
@@ -17,8 +17,11 @@
     <button type="button" class="btn btn-primary btn-lg">Non-Profit</button>
     <a href=commercial>
     <button type="button" class="btn btn-primary btn-lg">Commercial Information</button>
+    <a href=admin>
+    <button type="button" class="btn btn-primary btn-lg">Admin?</button>
     </a>
     </center>
+    
     &nbsp;
     &nbsp;
 </h3>
